# rusty-machine

./: .gitignore  Cargo.toml  README.md  app.py  benchmark.py  build.rs  lbfgs_api.txt  lbfgs_functions.txt  pyproject.toml  requirements.txt  test.py  test1.py  test2.py  test3.py
rustymachine_api/: __init__.py  models.py
src/: kernels.cu  kernels.ptx  lib.rs  matmul.ptx
