[package]
name = "rusty_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_machine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
cust = "0.3.1"