[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "rusty_machine"
requires-python = ">=3.8"
description = "A high-performance machine learning library in Rust with Python bindings, accelerated by CUDA."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Arnav Gupta", email = "arnav.gupta.9404@gmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

# Core dependencies needed to USE the library
dependencies = [
    "numpy>=1.21",
    "cupy-cuda12x>=12.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]